--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,12 +14,42 @@ Experiment with deleting lines of code from the CSS to see how it affects the we
 .header-container {
 
     padding: 0 0.5rem;
-    height: 40px
-    background-color: #00001a; 
+    height: 40px;
     
+     
+    }
+
+    
+    h2 {
+
+      margin: 30px;
     }
     
+    nav {
+
+      float: right;
+      display: inline-block;
+
+      
+    }
     
+    .border {
+
+      float: left;
+
+
+    }
+    
+    #portfolio {
+
+      padding: right 20px;
+
+    }
+
+
+
+  
+
     
     body {
         padding: 0;
@@ -38,9 +68,9 @@ Experiment with deleting lines of code from the CSS to see how it affects the we
       h1 {
         padding: 20px 0;
         margin: 0;
-        margin-bottom: 20px;
         font-size: 28px;
         color: #eee;
+        display: inline-flex;
         text-align: center;
       }
       
@@ -52,17 +82,7 @@ Experiment with deleting lines of code from the CSS to see how it affects the we
         color: #d21034;
       }
       
-      .container {
-        width: 1024px;
-        margin: 0 auto;
-      }
-      
-      #main-bio,
-      #contact-info,
-      #bio-image {
-        float: left;
-      }
-      
+     
       #main-bio {
         width: 70%;
       }
@@ -74,5 +94,12 @@ Experiment with deleting lines of code from the CSS to see how it affects the we
       #bio-image {
         width: 200px;
         height: 200px;
-        margin-right: 20px;
+        margin-left: 20px;
+      }
+
+      footer {
+
+        text-align: center; 
+        color: #eee;
+        background-color: #333;
       }
