--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,10 +14,23 @@ Experiment with deleting lines of code from the CSS to see how it affects the we
 #header {
 
     padding: 0 0.5rem;
+    margin-bottom: 30px
     height: 40px;
     background: #333;
     
      
+    }
+
+    #header h1 {
+
+      margin-left: 130px
+    }
+
+    .border {
+
+      font-size: x-large;
+      margin: 10px;
+      margin: right 100px
     }
 
     
@@ -95,6 +108,7 @@ Experiment with deleting lines of code from the CSS to see how it affects the we
         width: 200px;
         height: 200px;
         margin-left: 20px;
+        border: black outset;
       }
 
       footer {
