--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,3 +106,12 @@ Experiment with deleting lines of code from the CSS to see how it affects the we
         color: #eee;
         background-color: #333;
       }
+
+     #allcontent {
+
+      width: 960px;
+      padding-top: 5px;
+      padding-bottom: 5px;
+      margin-left: auto;
+      margin-right: auto;
+     }
