--- a/stylecontact.css
+++ b/stylecontact.css
@@ -1,4 +1,14 @@
 
+
+body {
+
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+
+
+
+
 #header {
 
     padding: 0 0.5rem;
@@ -37,3 +47,74 @@ a {
     font-family: serif;
 
   }
+
+  h2 {
+
+      margin-left: 15%;
+
+
+
+  }
+  
+  
+  form {
+
+    width: 960px;
+    background-color: darkgrey;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+
+
+  }
+
+  .container {
+
+      border-radius: 5px;
+      background-color: #f2f2f2;
+      padding: 20px;
+      width: 960px;
+      padding-top: 5px;
+      padding-bottom: 5px;
+      margin-left: auto;
+      margin-right: auto;
+  }
+
+  #name {
+
+      width: 700px;
+      padding: 10px;
+      margin: 30px;
+
+
+
+
+  }
+
+
+  #mail {
+          width: 700px;
+          padding: 10px;
+          margin: 30px;
+
+
+  }
+
+
+  #msg {
+
+    width: 960px;
+    padding: 10px;
+    margin: 30px;
+    height: 333px;
+
+
+  }
+
+  
