--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,3 +116,16 @@ Experiment with deleting lines of code from the CSS to see how it affects the we
       margin-left: auto;
       margin-right: auto;
      }
+
+     
+     #input {
+      background-color: #d21034;
+      color: white;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    
+    #input :hover {
+      background-color: yellowgreen;
