added CSS Resets

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,13 @@
-/**
- First External CSS Stylesheet
- **/
-
-/*
-Each of these CSS elements is associated with an HTML Element, Class, or ID.
-Flip between this CSS file and the HTML to see how things line up.
-Experiment with deleting lines of code from the CSS to see how it affects the webpage when you refresh in the browser.
-*/
 
 
+/* CSS Reset */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+
+}
 
 
 #header {
@@ -78,6 +77,9 @@ Experiment with deleting lines of code from the CSS to see how it affects the we
       
       h2 {
         font-size: 24px;
+        text-decoration: underline;
+  
+        
       }
       
       a {
@@ -105,6 +107,8 @@ Experiment with deleting lines of code from the CSS to see how it affects the we
         text-align: center; 
         color: #eee;
         background-color: #333;
+        margin: 15px;
+
     
       }
 
