--- a/portfolio.css
+++ b/portfolio.css
@@ -1,11 +1,16 @@
+/* CSS Reset */
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    text-align: center
-  }
+
+
+}
   
   body {
   
     font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
   }
   
   
@@ -14,8 +19,9 @@
   
   #header {
   
-      padding: 0 0.5rem;
-      margin-bottom: 50px;
+      padding: 5px;
+      margin-bottom: 30px;
+      margin-top: 10px;
       height: 80px;
       background: #333333;
       color: white;
