--- a/stylecontact.css
+++ b/stylecontact.css
@@ -45,7 +45,7 @@ nav {
     display: inline-block;
     padding: 10px;
     font-family: serif;
-    font-size: large;
+    font-size: larger;
     margin: 10px;
     
 }
@@ -54,6 +54,7 @@ a {
     color: #d21034;
     padding: 10px;
     font-family: serif;
+  
 
   }
 
