--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,8 +83,8 @@
       }
       
       p {
-
-        float: left;
+        padding-left: 20px;
+        /* float: left; */
       }
       a {
         color: #d21034;
@@ -104,6 +104,7 @@
         height: 200px;
         margin-left: 20px;
         border: black outset;
+        float: left;
       }
 
       footer {
@@ -123,6 +124,12 @@
       padding-bottom: 5px;
       margin-left: auto;
       margin-right: auto;
+     }
+
+     .content {
+
+        display: inline;
+
      }
 
      
