--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,7 @@
         width: 200px;
         height: 200px;
         margin-left: 20px;
+        margin-right: 20px;
         border: black outset;
         float: left;
       }
@@ -129,6 +130,7 @@
      .content {
 
         display: inline;
+        
 
      }
 
